More changes to the twitter data structure

--- a/data/cackhanded.toml
+++ b/data/cackhanded.toml
@@ -414,3 +414,8 @@ fixme = 1
 title = "Chips for week 23, 2021"
 slug = '/weeknotes/chips-for-week-23-2021'
 edited_body = 1
+
+[1406862363383537665]
+title = "Chips for week 24, 2021"
+slug = '/weeknotes/chips-for-week-24-2021'
+edited_body = 1
