Use v1 AWS cli tool in Github Actions runners
Getting botocore errors when trying to use `aws s3 cp`, but debugging
shows the permissions were not at fault. I tried installing the awscli
from pypi to debug further, and it just worked. No idea why, no time
to look into it more, so just brute force that.

--- a/.github/workflows/rebuild.yaml
+++ b/.github/workflows/rebuild.yaml
@@ -43,6 +43,12 @@ jobs:
           pip install -r requirements.txt
           sudo apt-get install ripgrep
 
+      # getting errors with the v2 already installed on runners,
+      # yet v1 provided by pypi works just fine...
+      - name: Install AWS cli tool
+        run: |
+          pip install awscli
+
       - name: Setup tmate debugging session
         uses: mxschmitt/action-tmate@v3
         with:
