--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-boto3
-django
+boto3==1.18.40
+Django==3.2.7
 flourish>=0.10.3
-honcho
-libsass
-Pillow
-requests
-tweepy
-yasha
+honcho==1.0.1
+libsass==0.21.0
+Pillow==8.3.2
+requests==2.26.0
+tweepy==3.10.0
+yasha==5.0
