--- a/.github/workflows/rebuild.yaml
+++ b/.github/workflows/rebuild.yaml
@@ -80,10 +80,11 @@ jobs:
 
       - name: Notify on failure
         env:
-          TWIST_URL: ${{secrets.TWIST_URL}}
+          PUSHOVER_API_KEY: ${{secrets.PUSHOVER_API_KEY}}
+          PUSHOVER_USER_KEY: ${{secrets.PUSHOVER_USER_KEY}}
         if: failure()
         run: |
-          echo "" | ./script/twist_post FAILURE: $(date +'%Y-%m-%d') Site rebuild
+          echo "Site rebuild failed" | ./script/pushover "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
       - name: Register sha on site
         env:
